--- a/app/src/main/res/layout-w768dp/adapter_list.xml
+++ b/app/src/main/res/layout-w768dp/adapter_list.xml
@@ -41,15 +41,33 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/adapter_list"
+        <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            app:layoutManager="LinearLayoutManager"
-            tools:context=".I2cAdapterListActivity"
-            tools:listitem="@layout/adapter_list_content" />
+            android:layout_height="match_parent">
+
+            <com.github.ykc3.android.usbi2c.app.view.CustomRecyclerView
+                android:id="@+id/adapter_list"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="16dp"
+                android:layout_marginRight="16dp"
+                app:layoutManager="LinearLayoutManager"
+                tools:context=".I2cAdapterListActivity"
+                tools:listitem="@layout/adapter_list_content" />
+
+            <TextView
+                android:id="@+id/empty_adapter_list"
+                android:tag="empty_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:text="@string/empty_adapter_list"
+                android:textStyle="italic"
+                android:textAlignment="center"
+                android:layout_gravity="top|center_horizontal"
+                android:visibility="gone" />
+
+        </FrameLayout>
 
     </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
